--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "trezor-common"]
 	path = vendor/trezor-common
 	url = https://github.com/HypermistDev/trezor-common.git
+	branch = master
 [submodule "trezor-qrenc"]
 	path = vendor/trezor-qrenc
 	url = https://github.com/trezor/trezor-qrenc.git
